[package]
name = "shibuya"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/unsafe-risk/shibuya"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shibuya"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
